# wander_list

./: README.md  index.html  main.py  pyproject.toml  script.js  style.css  travel.db
assets/: SignInSide.js  main.html  signin.html
assets/static/html/: signin.html
assets/static/js/: globals.js  signin_side.js
model/: collab.ipynb  formula1.csv  hotels.csv
static/: index.html
static/css/: index.css  profile.css
static/html/: profile.html  signin_side.html
static/js/: index.js
tests/: test_login.py
travel/: __init__.py
travel/backend/: __init__.py  dao.py  db.py  server.py
